zeit.content.article changes
============================

3.34.2 (unreleased)
-------------------

- Nothing changed yet.


3.34.1 (2018-02-02)
-------------------

- MAINT: Remove Google News keyword suggestions, it's not used anymore


3.34.0 (2018-01-29)
-------------------

- Fix brown-bag release


3.33.1 (2018-01-26)
-------------------

- ZON-4296: Add version attribute to liveblog


3.33.0 (2018-01-19)
-------------------

- ZON-4289: Add constraint for news table box block


3.32.1 (2017-11-01)
-------------------

- MAINT: Extract grok-based element factory to zeit.edit


3.32.0 (2017-10-20)
-------------------

- ZON-4227: Implement mail module


3.31.0 (2017-10-19)
-------------------

- MAINT: Extract common modules to z.c.modules: rawtext, jobticker, quiz

- MAINT: Remove obsolete modules: audio, timeline, htmlblock

- MAINT: Remove obsolete video_2 setting


3.30.1 (2017-10-09)
-------------------

- ZON-4180: Use eta instead of countdown for scheduling


3.30.0 (2017-10-04)
-------------------

- ZON-3409: Move from remotetask to celery


3.29.0 (2017-09-28)
-------------------

- ARBEIT-116: Add box which is used as a profile_box in ZAR


3.28.4 (2017-09-27)
-------------------

- BUG-782: Be defensive about body structure and cursor positioning


3.28.3 (2017-09-14)
-------------------

- FIX: Add security declaration after introducing IArticle.header


3.28.2 (2017-09-08)
-------------------

- FIX: Fix typo in article edit view after introducing IArticle.body


3.28.1 (2017-09-07)
-------------------

- ZON-4206: Remove find_first_citation, replaced by `body.find_first(ICitation)`


3.28.0 (2017-09-07)
-------------------

- MAINT: Add `IArticle.body` and `header` convenience helpers


3.27.1 (2017-09-07)
-------------------

- ZON-3885: Remove ad placeholders


3.27.0 (2017-09-06)
-------------------

- ZON-4190: Add module for referencing a podcast


3.26.1 (2017-08-21)
-------------------
