@@ -4,7 +4,8 @@ zeit.content.article changes
 3.34.2 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- TMS-156: No longer mark (tms-based) keywords required for articles
+  (This reverts the requirements given in ZON-2881 and ZON-3305)
 
 
 3.34.1 (2018-02-02)
